--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Banco</a>
+      </div>
+
+      <ul class="nav navbar-nav">
+        <li><a href="#">Contas</a></li>
+        <li><a href="#">Serviços</a></li>
+      </ul>
+    </div>
+</nav>
+
 <div class="container">
   <app-account></app-account>
 </div>
