--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -2,22 +2,22 @@
     <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-12">
-                <p>Agência 1234</p>
+                <p>Agência: {{ agencia }}</p>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <p>Conta: 0001234-1</p>
+                <p>Conta: {{ conta }}</p>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <p>Tipo: Conta Corrente</p>
+                <p>Tipo: {{ tipo }}</p>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <p>Saldo: R$ 120,00</p>
+                <p>Saldo: {{ saldo }}</p>
             </div>
         </div>
     </div>
