criado componente de listagem de contas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,5 @@
 </nav>
 
 <div class="container">
-  <app-account></app-account>
-  <app-account-edit></app-account-edit>
+  <app-account-list></app-account-list>
 </div>
