criado campo de tipo input no componente de edição

--- a/src/app/account/account-edit/account-edit.component.html
+++ b/src/app/account/account-edit/account-edit.component.html
@@ -10,7 +10,7 @@
                   type="number"
                   id="agencia"
                   class="form-control"
-                  [(ngModel)]="agencia">
+                  [(ngModel)]="conta.agencia">
               </div>
             </div>
         </div>
@@ -24,7 +24,7 @@
                     type="number"
                     id="conta"
                     class="form-control"
-                    [(ngModel)]="conta">
+                    [(ngModel)]="conta.conta">
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
                   type="text"
                   id="tipo"
                   class="form-control"
-                  [(ngModel)]="tipo">
+                  [(ngModel)]="conta.tipo">
               </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
                 type="number"
                 id="saldo"
                 class="form-control"
-                [(ngModel)]="saldo">
+                [(ngModel)]="conta.saldo">
             </div>
           </div>
         </div>
