Incluídos eventos de ciclo de vida do componente

--- a/src/app/account/account-edit/account-edit.component.html
+++ b/src/app/account/account-edit/account-edit.component.html
@@ -1,8 +1,11 @@
 <div class="row">
     <div class="col-xs-3">
+        <h3>
+          <ng-content></ng-content>
+        </h3>
         <div class="row">
             <div class="col-xs-12">
-              <div class="form-group">
+              <div class="form-group" #agencia>
                 <label for="agencia" class="control-label">
                   Agência
                 </label>
