Criada diretiva highlight para exemplificar as anotações @HostBinding e @HostListener

--- a/src/app/account/account-list/account-list.component.html
+++ b/src/app/account/account-list/account-list.component.html
@@ -17,7 +17,7 @@
         (accountSaved)="onAccountSaved($event)"
         *ngIf="selectedIndex >= 0; else emptyAccount">
         
-        Cadastro de Conta
+        <h3 highlight>Cadastro de Conta</h3>
       </app-account-edit>
 
       <ng-template #emptyAccount>
