Exemplificado utilização da diretiva ngSwitch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,4 +14,5 @@
 <div class="container">
   <app-account-list *ngIf="page === 'accounts'"></app-account-list>
   <app-service-list *ngIf="page === 'services'"></app-service-list>
+  <app-demo-switch></app-demo-switch>
 </div>
