--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,8 @@
 </nav>
 
 <div class="container">
-  <app-account-list *ngIf="page === 'accounts'"></app-account-list>
+  <router-outlet></router-outlet>
+  <!-- <app-account-list *ngIf="page === 'accounts'"></app-account-list>
   <app-service-list *ngIf="page === 'services'"></app-service-list>
-  <app-demo-switch></app-demo-switch>
+  <app-demo-switch></app-demo-switch> -->
 </div>
