iniciado criação do componente de listagem de transações

--- a/src/app/account/account-detail/account-detail.component.html
+++ b/src/app/account/account-detail/account-detail.component.html
@@ -9,5 +9,16 @@
       type="button"
       class="btn btn-primary"
       (click)="onEdit()">Alterar Dados</button>
+
+    <button
+      type="button"
+      class="btn btn-defaul"
+      (click)="onShowTransactions()">Extrato</button>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <router-outlet></router-outlet>
   </div>
 </div>
