Demonstração de como utilizar query param

--- a/src/app/transaction-list/transaction-list.component.html
+++ b/src/app/transaction-list/transaction-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  transaction-list works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <p>id: {{ index }}</p>
+    <p>start: {{ startDate | date: 'dd/MM/yyyy' }}</p>
+    <p>end: {{ endDate }}</p>
+  </div>
+</div>
