--- a/src/app/account/account-detail/account-detail.component.html
+++ b/src/app/account/account-detail/account-detail.component.html
@@ -8,7 +8,8 @@
     <button
       type="button"
       class="btn btn-primary"
-      (click)="onEdit()">Alterar Dados</button>
+      (click)="onEdit()"
+      *ngIf="canEdit">Alterar Dados</button>
 
     <button
       type="button"
