--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><a 
-            [routerLink]="['/accounts']">Contas</a></li>
+            (click)="onLoadContas()">Contas</a></li>
         <li routerLinkActive="active"><a
             routerLink="/services">Serviços</a></li>
       </ul>
