--- a/src/app/services/service-edit/service-edit.component.html
+++ b/src/app/services/service-edit/service-edit.component.html
@@ -1,32 +1,47 @@
 <div class="row">
   <div class="col-xs-12">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="form-group">
-          <label for="name"
-            class="control-label">Nome</label>
-            <input
-              type="text"
-              id="name"
-              class="form-control"
-              [(ngModel)]="service.name">
-        </div>
+    <form (ngSubmit)="onSave()" [formGroup]="form">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group"
+            [ngClass]="{'has-error': form.get('name').invalid && form.get('name').touched}">
+            <label for="name"
+              class="control-label">Nome</label>
+              <input
+                type="text"
+                id="name"
+                class="form-control"
+                formControlName="name">
+              <span
+                *ngIf="form.get('name').invalid && form.get('name').touched"
+                class="help-block">Favor informar o nome!</span>
+          </div>
 
-        <div class="form-group">
-          <label for="value"
-            class="control-label">Valor</label>
-            <input
-              type="text"
-              id="value"
-              class="form-control"
-              [(ngModel)]="service.value">
-        </div>
+          <div class="form-group"
+          [ngClass]="{'has-error': form.get('value').invalid && form.get('value').touched}">
+            <label for="value"
+              class="control-label">Valor</label>
+              <input
+                type="number"
+                id="value"
+                class="form-control"
+                formControlName="value">
+                <span
+                *ngIf="form.get('value').invalid && form.get('value').touched"
+                class="help-block">
+                <span
+                  *ngIf="form.get('value').errors['required']">Favor informar o valor!</span>
+                <span
+                  *ngIf="form.get('value').errors['min']">Valor não pode ser negativo!</span>
+              </span>
+          </div>
 
-        <button
-          class="btn btn-primary"
-          type="button"
-          (click)="onSave()">Salvar</button>
+          <button
+            class="btn btn-primary"
+            type="submit"
+            [disabled]="form.invalid">Salvar</button>
+        </div>
       </div>
-    </div>
+    </form>
   </div>
 </div>
