Criado formulário para cadastro de usuários

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,8 @@
 
       <div class="navbar-right">
         <ul class="nav navbar-nav">
+            <li><a routerLink="/register"
+                    routerLinkActive="active">Cadastre-se</a></li>
           <li><a (click)="onLogin()" style="cursor: pointer;">Login</a></li>
           <li><a (click)="onLogout()" style="cursor: pointer;">Logout</a></li>
         </ul>
