--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,11 @@
 
       <div class="navbar-right">
         <ul class="nav navbar-nav">
-            <li><a routerLink="/register"
+            <li *ngIf="!isLoggedIn()"><a routerLink="/register"
                     routerLinkActive="active">Cadastre-se</a></li>
-          <li><a (click)="onLogin()" style="cursor: pointer;">Login</a></li>
-          <li><a (click)="onLogout()" style="cursor: pointer;">Logout</a></li>
+          <li *ngIf="!isLoggedIn()"><a routerLink="/login"
+            routerLinkActive="active">Login</a></li>
+          <li *ngIf="isLoggedIn()"><a (click)="onLogout()" style="cursor: pointer;">Logout</a></li>
         </ul>
       </div>
     </div>
